--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'PhD Student in Artificial Intelligence, University of Pisa and University of Bari'
+    twitter: 'colavito_g'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
