--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -73,3 +73,8 @@ sitemap:
   _merge: deep
 minify:
   _merge: deep
+backend:
+  name: git-gateway
+  repo: peppocola/peppocola.github.io
+  branch: master
+  site_domain: peppocola.github.io
