--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -17,7 +17,7 @@ main:
     url: /#news
     weight: 13
   - name: Available Thesis
-    url: /#thesis
+    url: /theses
     weight: 14
   - name: CV
     url: uploads/resume.pdf
