--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -65,3 +65,5 @@ jobs:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4.0.5
+      with:
+        artifact_name: github-pages-artifact
