--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,18 +1,27 @@
 name: Deploy website to GitHub Pages
+
 env:
-  WC_HUGO_VERSION: '0.126.3'
+  WC_HUGO_VERSION: '0.136.5'
+
 on:
+  # Trigger the workflow every time you push to the `main` branch
   push:
     branches: ["main"]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
+
+# Provide permission to clone the repo and deploy it to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
+
 jobs:
+  # Build website
   build:
     if: github.repository_owner != 'HugoBlox'
     runs-on: ubuntu-latest
@@ -20,6 +29,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
+          # Fetch history for Hugo's .GitInfo and .Lastmod
         fetch-depth: 0
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
@@ -34,7 +44,7 @@ jobs:
           ${{ runner.os }}-hugomod-
     - name: Setup Pages
       id: pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@v5
     - name: Build with Hugo
       env:
         HUGO_ENVIRONMENT: production
@@ -46,8 +56,9 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        name: github-pages-artifact
         path: ./public
+
+  # Deploy website to GitHub Pages hosting
   deploy:
     if: github.repository_owner != 'HugoBlox'
     environment:
@@ -56,13 +67,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: github-pages-artifact
-        path: ./public
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v4.0.5
-      with:
-        artifact_name: github-pages-artifact
+      uses: actions/deploy-pages@v4
